fixed nav bar on mobile devices, centered home page content, updated carosel

--- a/problem-set-5/homepage/styles-contacts.css
+++ b/problem-set-5/homepage/styles-contacts.css
@@ -8,13 +8,11 @@ input[type=text], select, textarea {
 
 #form-container {
   border-radius: 1px;
-  background-color: #f2f2f2;
   padding: 20px;
 }
 
 body{
     text-align: center;
-    color: #2F2FA2;
 }
 
 .contact-methods{
